build.txt
In file included from /home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430_timers.cpp:1:0:
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430_timers.cpp: In member function ‘void MSP430::runTimer0(bool)’:
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430_timers.cpp:10:34: error: ‘TA0CTL0’ was not declared in this scope
     unsigned int TA0CTL0_ = _m16(TA0CTL0);
                                  ^
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430.h:19:33: note: in definition of macro ‘_mem’
 #define _mem(addr) this->Memory[addr]
                                 ^
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430_timers.cpp:10:29: note: in expansion of macro ‘_m16’
     unsigned int TA0CTL0_ = _m16(TA0CTL0);
                             ^
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430_timers.cpp:11:34: error: ‘TA0CTL1’ was not declared in this scope
     unsigned int TA0CTL1_ = _m16(TA0CTL1);
                                  ^
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430.h:19:33: note: in definition of macro ‘_mem’
 #define _mem(addr) this->Memory[addr]
                                 ^
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430_timers.cpp:11:29: note: in expansion of macro ‘_m16’
     unsigned int TA0CTL1_ = _m16(TA0CTL1);
                             ^
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430_timers.cpp:12:34: error: ‘TA0CTL2’ was not declared in this scope
     unsigned int TA0CTL2_ = _m16(TA0CTL2);
                                  ^
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430.h:19:33: note: in definition of macro ‘_mem’
 #define _mem(addr) this->Memory[addr]
                                 ^
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430_timers.cpp:12:29: note: in expansion of macro ‘_m16’
     unsigned int TA0CTL2_ = _m16(TA0CTL2);
                             ^
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430_timers.cpp:18:46: error: expected ‘,’ or ‘;’ before ‘)’ token
     int clkSelect = (TACTL_ & 0x50|0x60) >> 8);
                                              ^
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430_timers.cpp:25:9: error: expected primary-expression before ‘int’
         int clkDiv = (TACTL_ & 0x30|0x40) >> 6);
         ^
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430_timers.cpp:25:47: error: expression cannot be used as a function
         int clkDiv = (TACTL_ & 0x30|0x40) >> 6);
                                               ^
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430_timers.cpp:25:48: error: expected ‘)’ before ‘;’ token
         int clkDiv = (TACTL_ & 0x30|0x40) >> 6);
                                                ^
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430_timers.cpp:26:50: error: expected ‘,’ or ‘;’ before ‘)’ token
         const int MCx = (TACTL_ & 0x10|0x20) >> 4);
                                                  ^
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430_timers.cpp:29:21: error: expected ‘)’ before ‘{’ token
         if((MCx > 0){
                     ^
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430_timers.cpp:102:5: error: expected primary-expression before ‘}’ token
     }
     ^
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430_timers.cpp:102:5: error: expected ‘;’ before ‘}’ token
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430_timers.cpp: At global scope:
/home/eternia/GBackups/Dev/Cpp/EterniaLib/src/Emulation/MPU/msp430_timers.cpp:103:1: error: expected declaration before ‘}’ token
 }
 ^
make[2]: *** [CMakeFiles/Eternia.dir/src/Emulation/MPU/msp430_timers.cpp.o] Error 1
make[1]: *** [CMakeFiles/Eternia.dir/all] Error 2
make: *** [all] Error 2
